LU-1544 llog: remove lfs catinfo command

This patch removes the llog catinfo code, both client and server
side, since it has not been maintained and may crash the client
system in some cases.

Signed-off-by: Gregoire Pichon <gregoire.pichon@bull.net>
Signed-off-by: Bob Glossman <bogl@whamcloud.com>
Change-Id: Ia55e161ca118dad66a3136850de2f0e8f7aa5206
Reviewed-on: http://review.whamcloud.com/3450
Tested-by: Hudson
Reviewed-by: Mike Pershin <tappro@whamcloud.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>